@@ -27,6 +27,7 @@ Changes for 1.3.4.1
 -Fixed the thwomp's ground pound dirt effect being inproperly aligned
 -Bowser III'rd will shake the screen on his ground pount
 -Fixed the vanilla bug: Link may die when attempting to use the Clown Car being in a fairy form, and when flying up on the Clown Car while any vines behind him
+-Avoided the ability to switch the playable character by the Clown Car at the top of a player switch block
 
 Changes for 1.3.4
 -Fixed the inability to use any custom sounds and custom music at level's custom data directory
